<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainMenu">

    <!-- Play Button -->
    <TextView
        android:id="@+id/mainMenu"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/black"
        android:onClick="onStartChooseDeck"
        android:text="@string/play_button" />

    <!-- Download Categories Button -->
    <Button
        android:id="@+id/downloadCategoriesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/black"
        android:onClick="onStartDownload_Categories"
        android:text="@string/download_button" />

    <Button
        android:id="@+id/createCategoriesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/black"
        android:onClick="onStartCreateCategory"
        android:text="@string/create_cat" />

    <!-- How to Play Button -->
    <Button
        android:id="@+id/howToPlayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/black"
        android:onClick="onStartHowToPlay"
        android:text="@string/how_to_play" />

    <!-- Settings Button -->
    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/black"
        android:onClick="onStartSettings"
        android:text="@string/settings_button" />

</LinearLayout>