<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="32dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    android:background="@color/main_background"
    tools:context=".CreateCategoryActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="117dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/logo_notxt" />

    <TextView
        android:id="@+id/addCardsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:text="@string/AddCardsTitle"
        android:textColor="@color/white_background"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/CreateCategoryPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addCardsTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/create_prompt"
        android:textAlignment="center"
        android:textColor="@color/white_background" />

    <EditText
        android:id="@+id/categoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_below="@+id/CreateCategoryPrompt"
        android:layout_marginTop="0dp"
        android:hint="@string/create_box_text"
        android:inputType="textNoSuggestions"
        android:paddingTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/white_background"
        android:textColorHint="#80FFFFFF"
        android:theme="@style/EditTextTheme" />

    <Button
        android:id="@+id/createDeckButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryName"
        android:layout_centerInParent="true"
        android:layout_marginTop="19dp"
        android:backgroundTint="@color/secondary_background"
        android:text="@string/create_button" />

    <Button
        android:id="@+id/create_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/secondary_background"
        android:text="@string/back_menu_button" />
</RelativeLayout>