<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/addCardsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/white_background"
        android:text="@string/AddCardsTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/CategoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/addCardsTitle"
        android:textColor="@color/white_background"
        android:text="@string/CategoryName"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp"/>

    <LinearLayout
        android:id="@+id/AddCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addCardsTitle"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/itemText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:hint="@string/CardTitle"
            android:inputType="textNoSuggestions"
            android:paddingTop="50dp"
            android:textAlignment="center"
            android:textColor="@color/white_background"
            android:textColorHint="@color/white"
            android:textSize="23sp"
            android:theme="@style/EditTextTheme" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:backgroundTint="@color/secondary_background"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/AddCard" />

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_background"
        android:textColor="@color/white"
        android:layout_above="@+id/category_back"
        android:onClick="onSave"
        android:text="@string/Save"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_background"
        android:textColor="@color/white"
        android:layout_above="@+id/category_back"
        android:layout_alignEnd="@id/cardsListView"
        android:text="@string/Upload"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/category_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/secondary_background"
        android:textColor="@color/white"
        android:text="@string/back_screen_button"
        android:textSize="20sp"/>

    <ListView
        android:id="@+id/cardsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/uploadButton"
        android:layout_below="@id/AddCardLayout"
        android:layout_marginTop="-1dp"
        android:layout_marginBottom="-1dp" />

</RelativeLayout>