<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="12dp"
    android:paddingTop="12dp"
    android:paddingRight="12dp"
    android:paddingBottom="12dp"
    android:background="@color/main_background"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/SettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_title"
        android:textColor="@color/white_background"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

    <TextView
        android:id="@+id/TimeLimitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SettingsTitle"
        android:layout_alignParentStart="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="24dp"
        android:text="@string/rounds"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white_background" />

    <!-- Log Out Button -->

    <Spinner
        android:id="@+id/TimeLimits"
        android:layout_width="163dp"
        android:layout_height="66dp"
        android:layout_alignTop="@id/TimeLimitText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-120dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="170dp"
        android:layout_toEndOf="@id/TimeLimitText"
        android:paddingTop="24dp"
        android:textColor="@color/white_background"
        android:textSize="30sp" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@id/settings_back"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:text="@string/logout_button"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/settings_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/secondary_background"
        android:textColor="@color/white"
        android:text="@string/back_menu_button"
        android:textSize="25sp"/>
</RelativeLayout>