<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@color/main_background">

    <LinearLayout
        android:id="@+id/RoundNumberLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/RoundNumberHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RoundNumberHeading"
            android:textColor="@color/white_background"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/RoundNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/RoundNumber"
            android:textColor="@color/white_background"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"/>


    </LinearLayout>
<!--
    <TextView
        android:id="@+id/TempTimerHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/RoundNumberLayout"
        android:text="0:00"
        android:textColor="@color/white_background"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        -->


    <TextView
        android:id="@+id/addCardsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/DisplayCard"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white_background" />

</RelativeLayout>